--- a/SET-A/A-6/style.css
+++ b/SET-A/A-6/style.css
@@ -3,6 +3,8 @@ body
     background-color: black;
     display: flex;
     justify-content: center;
+    align-items: center;
+    height: 100vh;
     overflow: hidden;
 }
 
