--- a/SET-A/A-4/style.css
+++ b/SET-A/A-4/style.css
@@ -25,6 +25,7 @@ body {
   
   .nav  .nav-btn {
     display: none;
+    float: left;
   }
   
   .nav .nav-links {
@@ -47,12 +48,14 @@ body {
   .nav  #nav-check {
     display: none;
   }
+
+  
   
   @media (max-width:600px) {
     .nav .nav-btn {
       display: inline-block;
       position: absolute;
-      right: 0px;
+      left: 0px;
       top: 0px;
     }
     .nav  .nav-btn  label {
@@ -68,13 +71,10 @@ body {
       width: 40px;
       height: 6px;
       border-top: 5px solid #eee;
-      
+      margin: 0;
     }
 
-    .up
-    {
-        transform: rotate(0deg);
-    }
+    
     .nav  .nav-links {
       position: absolute;
       display: block;
@@ -83,7 +83,7 @@ body {
       transition: all 0.3s ease-in;
       overflow-y: hidden;
       top: 50px;
-      right:  0px;
+      left:   0px;
       text-align: center;
     }
     .nav  .nav-links  a {
