--- a/SET-B/B-6/style.css
+++ b/SET-B/B-6/style.css
@@ -4,8 +4,8 @@ body
  justify-content: center;
  align-items: center;
  height: 100vh;
- background-color: yellow;
- overflow: hidden;
+ background: #ffc600;
+  overflow: hidden;
 }
 
 #todos
